修正几个漏加margin的错误

--- a/task2/icepro/task0002.html
+++ b/task2/icepro/task0002.html
@@ -77,10 +77,11 @@
 		article ,aside {
 			background: #FFFFFF;
 			padding: 1.25rem;
-			margin-bottom: 1.25rem;
 			box-shadow: 0.315rem 0.125rem 0.315rem #888888; 
 			width: 80%;
-			margin: auto;
+			margin-left: auto;
+			margin-right: auto;
+			margin-bottom: 1.25rem;
 		}
 		article ul li {
 			list-style: none;
@@ -89,6 +90,7 @@
 			padding: 0.975rem;
 			border: 1px solid black;
 			width: 6.25rem;
+			margin: 0.625rem;
 		}
 		article figure img {
 			width: 6.25rem;
@@ -118,7 +120,7 @@
 		}
 		/* 正文位置 */
 		.context {
-			margin-top: 2.975rem;
+			margin-top: 3.975rem;
 			padding: 0.9375rem; 
 		}
 		/* 设置表格 */
