使得语义化标签更合理

--- a/task1/task0001-icepro.html
+++ b/task1/task0001-icepro.html
@@ -16,8 +16,8 @@
 	<header>
 		<h1>另外一篇文章的一级标题</h1>
 		<h2>文章的二级标题</h2>
+		<p><author>文章作者</author><time>2016-1-1</time></p>
 	</header>
-	<p>文章作者 文章发表时间</p>
 	<p>这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,换行了！</p>
 	<p>这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,<a href="http://ife.baidu.com/">这里有一个链接到ife.baidu.com</a>,这是一个很长很长的段落,<b>这里有个粗体字</b>,这是一个很长很长的段落.</p>
 	<img src="http://d.hiphotos.baidu.com/zhidao/pic/item/e7cd7b899e510fb38cc9205dd833c895d0430c23.jpg" alt="一个图片" width="200" height="200" />
@@ -29,8 +29,8 @@
 	<header>
 		<h1>另外一篇文章的一级标题</h1>
 		<h2>文章的二级标题</h2>
+		<p><author>文章作者</author><time>2016-1-1</time></p>
 	</header>
-	<p>文章作者 文章发表时间</p>
 	<p>这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,换行了！</p>
 	<img src="http://d.hiphotos.baidu.com/zhidao/pic/item/e7cd7b899e510fb38cc9205dd833c895d0430c23.jpg" alt="一个图片" width="200" height="200" />
 	<ul>
@@ -42,36 +42,34 @@
 
 <section>
 	<header><h1>图片</h1></header>
-	<ul>
-		<dl>
-			<p>好看的图片</p>
-			<img src="http://d.hiphotos.baidu.com/zhidao/pic/item/e7cd7b899e510fb38cc9205dd833c895d0430c23.jpg" alt="一个图片" width="200" height="200" />
-		</dl>
-		<dl>
-			<p>好看的图片</p>
-			<img src="http://d.hiphotos.baidu.com/zhidao/pic/item/e7cd7b899e510fb38cc9205dd833c895d0430c23.jpg" alt="一个图片" width="200" height="200" />
-		</dl>
-		<dl><p>好看的图片</p>
-			<img src="http://d.hiphotos.baidu.com/zhidao/pic/item/e7cd7b899e510fb38cc9205dd833c895d0430c23.jpg" alt="一个图片" width="200" height="200" />
-		</dl>
-		<dl><p>好看的图片</p>
-			<img src="http://d.hiphotos.baidu.com/zhidao/pic/item/e7cd7b899e510fb38cc9205dd833c895d0430c23.jpg" alt="一个图片" width="200" height="200" />
-		</dl>
-		<dl><p>好看的图片</p>
-			<img src="http://d.hiphotos.baidu.com/zhidao/pic/item/e7cd7b899e510fb38cc9205dd833c895d0430c23.jpg" alt="一个图片" width="200" height="200" />
-		</dl>
-		<dl><p>好看的图片</p>
-			<img src="http://d.hiphotos.baidu.com/zhidao/pic/item/e7cd7b899e510fb38cc9205dd833c895d0430c23.jpg" alt="一个图片" width="200" height="200" />
-		</dl>
-	</ul>
+	<figure>
+		<p>好看的图片</p>
+		<img width="200" height="200" src="http://d.hiphotos.baidu.com/zhidao/pic/item/e7cd7b899e510fb38cc9205dd833c895d0430c23.jpg" alt="一个图片" />
+	</figure>
+	<figure>
+		<p>好看的图片</p>
+		<img width="200" height="200" src="http://d.hiphotos.baidu.com/zhidao/pic/item/e7cd7b899e510fb38cc9205dd833c895d0430c23.jpg" alt="一个图片" />
+	</figure>
+	<figure><p>好看的图片</p>
+		<img width="200" height="200" src="http://d.hiphotos.baidu.com/zhidao/pic/item/e7cd7b899e510fb38cc9205dd833c895d0430c23.jpg" alt="一个图片" />
+	</figure>
+	<figure><p>好看的图片</p>
+		<img width="200" height="200" src="http://d.hiphotos.baidu.com/zhidao/pic/item/e7cd7b899e510fb38cc9205dd833c895d0430c23.jpg" alt="一个图片" />
+	</figure>
+	<figure><p>好看的图片</p>
+		<img width="200" height="200" src="http://d.hiphotos.baidu.com/zhidao/pic/item/e7cd7b899e510fb38cc9205dd833c895d0430c23.jpg" alt="一个图片" />
+	</figure>
+	<figure><p>好看的图片</p>
+		<img width="200" height="200" src="http://d.hiphotos.baidu.com/zhidao/pic/item/e7cd7b899e510fb38cc9205dd833c895d0430c23.jpg" alt="一个图片" />
+	</figure>
 </section>
 
 <section>
 	<header>
-		<h1>最后一篇文章的一级标题</h1>
-		<h2>文章二级标题</h2>
+		<h1>另外一篇文章的一级标题</h1>
+		<h2>文章的二级标题</h2>
+		<p><author>文章作者</author><time>2016-1-1</time></p>
 	</header>
-	<p>文章作者 文章发布时间</p>
 	<ol>
 		<li>排名1</li>
 		<li>排名2</li>
@@ -121,6 +119,9 @@
 		</p>
 	</form>
 </aside>
-<footer>版权所有&copy;</footer>
+
+<footer>
+	<p>版权所有&copy;</p>
+</footer>
 </body>
 </html>
