修正一个关于颜色的理解错误

--- a/task2/icepro/task0002.html
+++ b/task2/icepro/task0002.html
@@ -56,9 +56,9 @@
 			-webkit-transition: all 1s; /* Safari 和 Chrome */
 			-o-transition: all 1s; /* Opera */
 		}
-		nav ul li:last-child > a{
+		/*nav ul li:last-child > a{
 			color:#998899;
-		}
+		}*/
 		nav ul li a:hover {
 			color:red;
 		}
