--- a/task1/icepro/task0001-icepro.html
+++ b/task1/icepro/task0001-icepro.html
@@ -18,7 +18,10 @@
 		<header>
 			<h1>另外一篇文章的一级标题</h1>
 			<h2>文章的二级标题</h2>
-			<p><author>文章作者</author><time>2016-1-1</time></p>
+			<p>
+				<span>文章作者</span>
+				<time>2016-1-1</time>
+			</p>
 		</header>
 		<p>这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,换行了！</p>
 		<p>这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,<a href="http://ife.baidu.com/">这里有一个链接到ife.baidu.com</a>,这是一个很长很长的段落,<b>这里有个粗体字</b>,这是一个很长很长的段落.</p>
@@ -31,7 +34,10 @@
 		<header>
 			<h1>另外一篇文章的一级标题</h1>
 			<h2>文章的二级标题</h2>
-			<p><author>文章作者</author><time>2016-1-1</time></p>
+			<p>
+				<span>文章作者</span>
+				<time>2016-1-1</time>
+			</p>
 		</header>
 		<p>这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,这是一个很长很长的段落,换行了！</p>
 		<img src="http://d.hiphotos.baidu.com/zhidao/pic/item/e7cd7b899e510fb38cc9205dd833c895d0430c23.jpg" alt="一个图片" width="200" height="200" />
@@ -70,7 +76,10 @@
 		<header>
 			<h1>另外一篇文章的一级标题</h1>
 			<h2>文章的二级标题</h2>
-			<p><author>文章作者</author><time>2016-1-1</time></p>
+			<p>
+				<span>文章作者</span>
+				<time>2016-1-1</time>
+			</p>
 		</header>
 		<ol>
 			<li>排名1</li>
@@ -89,8 +98,10 @@
 
 	<!-- TODO: 侧边栏 -->
 	<aside>
-		<h1>以后这里是一个侧边栏，这里是侧边栏的标题</h1>
-		<h2>侧边栏注册窗口标题</h2></header>
+		<header>
+			<h1>以后这里是一个侧边栏，这里是侧边栏的标题</h1>
+			<h2>侧边栏注册窗口标题</h2>
+		</header>
 		<form>
 			
 			<div>
