修正一个关于图片伸缩的问题

--- a/task2/icepro/task0002.html
+++ b/task2/icepro/task0002.html
@@ -91,6 +91,7 @@
 			border: 1px solid black;
 			width: 6.25rem;
 			margin: 0.625rem;
+			float: left;
 		}
 		article figure img {
 			width: 6.25rem;
@@ -182,6 +183,9 @@
 		    margin-top: 1rem;
 		    border-radius: 0.625rem;
 		}
+		.clear-both {
+			clear: both;
+		}
 	</style>
 </head>
 <body>
@@ -255,7 +259,19 @@
 		<figure><p>好看的图片</p>
 			<img src="http://d.hiphotos.baidu.com/zhidao/pic/item/e7cd7b899e510fb38cc9205dd833c895d0430c23.jpg" alt="一个图片" />
 		</figure>
-		
+		<figure><p>好看的图片</p>
+			<img src="http://d.hiphotos.baidu.com/zhidao/pic/item/e7cd7b899e510fb38cc9205dd833c895d0430c23.jpg" alt="一个图片" />
+		</figure>
+		<figure><p>好看的图片</p>
+			<img src="http://d.hiphotos.baidu.com/zhidao/pic/item/e7cd7b899e510fb38cc9205dd833c895d0430c23.jpg" alt="一个图片" />
+		</figure>
+		<figure><p>好看的图片</p>
+			<img src="http://d.hiphotos.baidu.com/zhidao/pic/item/e7cd7b899e510fb38cc9205dd833c895d0430c23.jpg" alt="一个图片" />
+		</figure>
+		<figure><p>好看的图片</p>
+			<img src="http://d.hiphotos.baidu.com/zhidao/pic/item/e7cd7b899e510fb38cc9205dd833c895d0430c23.jpg" alt="一个图片" />
+		</figure>
+		<div class="clear-both"></div>
 	</article>
 
 	<article>
