--- a/task2/ricosmall/task0002-ricosmall.html
+++ b/task2/ricosmall/task0002-ricosmall.html
@@ -102,6 +102,7 @@
             }
             .profile-detail p{
                 color: #aaa;
+                margin-left: 30%;
             }
             .prefix{
                 width: 30%;
