修改中间模块溢出，去掉固定高度，使之符合要求

--- a/task3/ricosmall/task0003-ricosmall.html
+++ b/task3/ricosmall/task0003-ricosmall.html
@@ -9,9 +9,8 @@
                 margin: 0;
             }
             .wrap{
-                height: 460px;
-                margin: 0 20px;
-                margin-top: 20px;
+                overflow: hidden;
+                margin: 20px;
                 padding: 20px;
                 background: #eee;
                 border: 1px solid #999;
@@ -19,39 +18,35 @@
             .left{
                 background: #fff;
                 float: left;
-                top: 0;
-                left: 0;
                 width: 200px;
                 height: 120px;
                 border: 1px solid #999;
-                margin-right: 20px;
             }
             .left img, h4{
-                float: left;
                 margin-top: 20px;
                 margin-left: 20px;
             }
-
-            .main{
-                background: #fff;
-                position: absolute;
+            .right{
+                overflow: hidden;
+                margin-top: 0;
                 margin-left: 220px;
-                margin-right: 180px;
+                padding: 20px;
+                border: 1px solid #999;
+            }
+            .right-intro{
+                background: #fff;
+                margin-right: 140px;
                 border: 1px solid #999;
                 padding: 20px;
-                max-height: 420px;
             }
-            .right{
-                background: #fff;
+            .right-members{
                 float: right;
-                top: 0;
-                right: 0;
+                padding-bottom: 20px;
+                background: #fff;
                 width: 120px;
-                height: 420px;
                 border: 1px solid #999;
             }
             .right img{
-                float: left;
                 margin: 20px 20px 0;
             }
         </style>
@@ -64,17 +59,19 @@
                 </div>
                 <h4>团队名称</h4>
             </div>
-            <div class="main">
-                <h2>关于团队的介绍</h2>
-                <p>
-                    百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院。
-                </p>
-            </div>
             <div class="right">
-                <img src="person-logo.png" alt="" />
-                <img src="person-logo.png" alt="" />
-                <img src="person-logo.png" alt="" />
-                <img src="person-logo.png" alt="" />
+                <div class="right-members">
+                    <img src="person-logo.png" alt="" />
+                    <img src="person-logo.png" alt="" />
+                    <img src="person-logo.png" alt="" />
+                    <img src="person-logo.png" alt="" />
+                </div>
+                <div class="right-intro">
+                    <h2>关于团队的介绍</h2>
+                    <p>
+                        百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院，百度web前端技术学院。
+                    </p>
+                </div>
             </div>
         </div>
     </body>
