--- a/task5/ricosmall/task0005-ricosmall.html
+++ b/task5/ricosmall/task0005-ricosmall.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>任务二：零基础HTML及CSS编码（一）</title>
+        <title>任务五：零基础HTML及CSS编码（二）</title>
         <style>
             *{
                 padding: 0;
@@ -21,7 +21,9 @@
                 background: #333233;
             }
             .main{
-                margin-top: 70px;
+                margin-top: 50px;
+                width: 100%;
+                overflow: hidden;
             }
             .footer{
                 height: 50px;
@@ -60,24 +62,38 @@
             .navigation a:hover{
                 color: #aaa;
             }
-            .eassy1, .eassy2, .picture, .eassy3, .slide{
+            .eassy1, .eassy2, .picture, .eassy3{
                 width: auto;
                 box-shadow: 0.15rem 0.15rem 1px 1px #777;
                 background: #fff;
                 padding: 40px 20px;
                 margin: 20px 20px 0;
+                overflow: hidden;
             }
             .slide{
                 width: 360px;
+                float: right;
+                margin: 20px 20px 0 0;
+                box-shadow: 0.15rem 0.15rem 1px 1px #777;
+                background: #fff;
+                padding: 40px 20px;
+            }
+            .mainbody{
+                overflow: hidden;
             }
             figure{
-                width: 340px;
+                max-width: 446px;
+                width: auto;
                 border: 1px solid #666;
-                margin: 20px;
+                margin: 20px 20px 0 0;
                 text-align: center;
+                overflow: hidden;
+                float: left;
             }
-            figure img{
-                width: 300px;
+            .mainbody img{
+                max-width: 446px;
+                width: 100%;
+                height: 100%;
             }
             table{
                 width: 100%;
