--- a/task6/icepro/task0006.html
+++ b/task6/icepro/task0006.html
@@ -1,258 +1,15 @@
-<!--1:45+12+0.5+11+1:00+35-->
+<!--5.5h-->
 <!doctype html>
 <html>
 <head>
 	<meta charset="utf-8">
 	<title>通过HTML及CSS模拟报纸排版</title>
-	<style>
-		* {
-			margin: 0px;
-			padding: 0px;
-		}
-		body {
-			margin: 0px;
-			padding-left: 44px;
-			padding-right: 44px;
-			width: 892px;
-			height: 1386px;
-			position: relative;
-		}
-		p {
-			font-family: 'Microsoft YaHei';
-			font-size: 12px;
-		}
-		hr {
-			border: 1px solid #000;
-			margin: 0px;
-			padding: 0px;
-		}
-		div {
-			position: relative;
-		}
-		nav {
-			height: 61px;
-		}
-		nav span {
-			font-family: 'SimHei';
-			position: absolute;
-			font-size: 12px;
-			margin-left: 6px;
-		}
-		nav::after {
-			clear: both;
-		}
-		.clear-both {
-			clear: both;
-		}
-		.logo {
-			float: left;
-			width: 110px;
-			height: 61px;
-			background: #d45d5c;
-		}
-		.logo span {
-			bottom: 0px;
-			color: #fff;
-		}
-		.right-date {
-			color: #d45d5c;
-			height: 100%;
-			width: 200px;
-		}
-		.right-date span {
-			bottom: 0px;
-			right: 0px;
-		}
-		.hg-grey {
-			border-color: #938e8c;
-		}
-		.fg-grey {
-			color: #767777;
-		}
-		.fg-pink {
-			color: #cc8091;
-		}
-		.context {
-			height: 100%;
-		}
-		.context span {
-			position: relative;
-			margin: 0px;
-		}
-
-		footer {
-			height: 61px;
-			bottom: 0px;
-		}
-		footer p {
-			text-align: right;
-			margin: 0px;
-			font-size: 12px;
-			color: #d45d5c;
-		}
-		.mask {
-			width: 191px;
-			height: 301px;
-			opacity:0.5;
-			z-index: 10;
-		}
-		.cover {
-			margin-top: 33px;
-			overflow: hidden;
-		}
-		.cover-pic {
-			width: 641px;
-			height: 301px;	
-		}
-		.cover-pic img {
-			position: absolute;
-			left: 0px;
-		}
-		.cover-about{
-			width: 203px;
-			height: 301px;
-			border-top: 2px solid #cc8091;
-		}
-		.cover article {
-			width: 641px;
-			margin-top: 24px;
-
-		}
-		.cover article p {
-			padding-right: 24px;
-			opacity: 0.7;
-			font-family: 'SimSun';
-			font-size: 12px;
-			font-family: "SimSun";
-			color: rgb(118, 119, 119);
-			line-height: 1.333;
-		}
-		.cover article section {
-			float: left;
-			overflow: hidden;
-			height: 168px;
-
-		}
-		/* TODO:chrome加粗 */
-		/* 无法实现chrome的加粗 */
-		.cover header > h2 {
-			font-size: 16px !important;
-			font-weight: bold !important;
-			text-decoration: underline;
-			margin-bottom: 16px;
-		}
-		.cover article section:nth-child(1) {
-			width: 40%;
-			color: #418c59;	
-		}
-
-		.cover article section:nth-child(2) {
-			width: 30%;
-			color: #d2994f;	
-		}
-		.cover article section:nth-child(3) {
-			width: 30%;
-			color: #cc7680;	
-		}
-		.cover article section:nth-child(3) p {
-			line-height: 1.75;
-			font-family: "SimSun";
-			color: rgb(118, 119, 119);
-		}
-
-		}
-		.cover article .what {
-			font-size: 12px;
-			line-height: 16px;
-		}
-		.cover-wrap {
-			overflow: hidden;
-		}
-		.what span {
-			color: #cd4a48;
-			font-style: italic;
-			font-size: 12px;
-			line-height: 16px;
-		}
-		.c-alpha-green {
-			background: #428c59;
-		}
-		.c-alpha-red {
-			background: #cc7580;
-		}
-		.right {
-			float: right;
-		}
-		.left {
-			float: left;
-		}
-
-		.title {
-			font-size: 24px;
-			text-decoration: underline;
-			font-variant: small-caps;
-			line-height: 40px;
-		}
-
-		.cover-about p {
-			margin-top:16px; 
-		}
-		.subtitle  {
-			font-size: 12px;
-			margin-top: 2px !important; 
-			word-wrap: break-word;
-			font-size: 12px;
-			color: #676767;
-			font-family: 'KaiTi';
-			line-height: 10px;
-		}
-		.headline {
-			font-size: 116px;
-			color: #75b86b;
-		}
-		.css {
-			position: absolute;
-			bottom: 0px;
-			margin-bottom: -9px;
-		}
-		.css > div {
-			float: left;
-		}
-		.marked {
-			font-size: 55px;
-			line-height: 55px;
-			margin-top: 0px !important;
-		}
-		.mixture {
-	    	margin-top: 13px;
-		}
-		.mixture > p {
-			margin: 0px;
-		}
-		.mixture .top {
-			font-size: 22px;
-		}
-		.home-page {
-			margin-top: 48px;
-			width: 415px;
-		}
-		.home-page article header h2 {
-			font-size: 42px;
-			font-family: "SimHei";
-			color: #11456b;
-			/*line-height: 16px;*/
-		}
-		.home-page header h2 > span {
-			color: #f5e327;
-			font-size: 72px;
-		}
-
-	</style>
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
 <nav>
-	<div class="logo"><span>ife-baidu.com</span></div>
-	<div class="right-date right"><span><time>2016-03</time></span></div>
+	<span class="logo">ife-baidu.com</span>
+	<span class="time"><time>2016-03</time></span>
 </nav>
 
 <hr class="hg-grey">
@@ -263,7 +20,7 @@
 			<div class="cover-pic left">
 				<div class="mask c-alpha-green right"></div>
 				<div class="mask c-alpha-red left"></div>
-				<img src="right-large.png">
+				<img src="img/right-large.png">
 			</div>
 			<div class="cover-about right"> 
 				<p>
@@ -318,16 +75,48 @@
 	<div class="home-page">
 		<article class="left">
 			<header>
-				<h2><span><b><i>THE</i></b></span><b> TECHNOLOGE OF FRONT</b></h2>
+				<h2><span><b><i>THE</i></b></span> TECHNOLOGE OF FRONT</h2>
+				<h3>前端技术领域</h3>
+				<hr />
 			</header>
+			<section>
+				
+				<p><span>前</span>端前端前端前端前端前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前<img class="right" src="img/figure.png">端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端端前端前端前端前端前端前。</p>
+				<p class="indent2em">端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端端前端前端前端前端前端前前端前端前端前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端端前端</p>
+				<p class="indent2em">前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端端前端前端前端前端前端前端前端前端前端前端前端端前端前端前端前端前端</p>
+			</section>
 		</article>
 		<div class="directory right">
-
+			<div class="right-bottom">
+				<img src="img/right-bottom.png">
+				<div class="banner">
+					<p>前端技术<span>前端技术前端技术</span></p>
+				</div>
+			</div>
+			<div class="directory-context">
+				<p><span class="triangle"></span>前端前端前端前端前端前端……………………<span class="end">前端</span></p>
+				<p><span class="triangle"></span>前端前端前端前端前端前端……………………<span class="end">前端</span></p>
+				<p><span class="triangle"></span>前端前端前端前端前端前端……………………<span class="end">前端</span></p>
+				<div class="footer">
+					<div class="red left">
+						<div class="zero left">
+							<p>0</p>
+						</div>
+						<div class="zero-about">
+							<p class="title">one two three four five</p>
+							<p class="subtitle">hello world hello world hello world</p>
+						</div>
+					</div>
+					<div class="footor-about right">
+						<p class="blockquote">JavaScript is the most commonly used programming language on earth. Even Back-End developers are more likely to use it than any other language.</p>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 	
 </div>
-<hr class="hg-grey">
+
 <footer><p>ife-baidu.com</p></footer>
 
 
