修改雪碧图并增加机构

--- a/task7/icepro/task0007.html
+++ b/task7/icepro/task0007.html
@@ -5,6 +5,84 @@
 	<link rel="stylesheet" type="text/css" href="css/main.min.css" />
 </head>
 <body>
+<nav>
+
+</nav>
+<article>
+	<section class="banner">
+		<header>
+			<h2>Time of new life</h2>
+		</header>
+		<p>新时代，年轻的人们让我们	一起体验新生活	，享受新生活</p>
+		<button>开始体验</button>
+		<ul class="detail">
+			<li>
+				<p><span class="font-cc"></span></p>
+				<p>打造全新世界观，让你更爱你的生活</p>
+			</li>
+			<li>
+				<p><span class="font-flag"></span></p>
+				<p>打造全新世界观，让你更爱你的生活</p>
+			</li>
+			<li>
+				<p><span class="font-flower"></span></p>
+				<p>打造全新世界观，让你更爱你的生活</p>
+			</li>
+			<li>
+				<p><span class="font-app"></span></p>
+				<p>打造全新世界观，让你更爱你的生活</p>
+			</li>
+		</ul>
+	</section>
+	<section class="new-world">
+		<p><span class="font-book"></span></p>
+		<header><h2>关于新世界，你不知道的还有什么？</h2></header>
+	</section>
+	<section class="find-city">
+		<header>
+			<h2>查找新世界城市活动信息<br>——</h2
+				>
+			<h3>每个城市有不同的活动信息，请自主查询你需要了解的城市</h3>
+		</header>
+		<ul>
+			<li>
+				<select placeholder="中国">
+					<option>中国</option>
+				</select>
+			</li>
+			<li>
+				<select placeholder="省份">
+					<option>北京市</option>
+					<option>天津市</option>
+					<option>河北市</option>
+					<option>陕西市</option>
+					<option>内蒙古自治区</option>
+					<option>辽宁省</option>
+				</select>
+			</li>
+			<li>
+				<select placeholder="城市">
+				</select>
+			</li>
+			<li><button>搜索</button></li>
+		</ul>
+	</section>
+	<section class="display">
+	</section>
+	<section class="switch－new">
+	</section>
+	<section class="read-more">
+	</section>
+	<section class="join-us">
+	</section>
+</article>
+<footer>
+	<div class="contract-us">
+	</div>
+	<div class="end">
+	</div>
+</footer>
+<!--
 <div class="font-cc"></div>
 <div class="font-flag"></div>
 <div class="font-man"></div>
@@ -16,6 +94,7 @@
 <div class="font-twtter"></div>
 <div class="font-globe"></div>
 <div class="font-sina"></div>
-<div class="font-hook"></div>
+<div class="font-book-ms"></div>
+-->
 </body>
 </html>
