--- a/task7/icepro/task0007.html
+++ b/task7/icepro/task0007.html
@@ -6,76 +6,96 @@
 </head>
 <body>
 <nav>
-
+	<div class="nav-left">
+		<h3><span class="font-book-ms"></span>新世界</h3>
+	</div>
+	<div class="nav-right">
+		<ul class="nav-nav">
+			<li>首页</li>
+			<li>最新活动</li>
+			<li>项目介绍</li>
+			<li>爱心社区</li>
+			<li>关于我们</li>
+			<li><span class="font-man"></span>登录</li>
+		</ul>
+	</div>
 </nav>
-<article>
-	<section class="banner">
-		<header>
-			<h2>Time of new life</h2>
-		</header>
-		<p>新时代，年轻的人们让我们	一起体验新生活	，享受新生活</p>
-		<button>开始体验</button>
-		<ul class="detail">
-			<li>
-				<p><span class="font-cc"></span></p>
-				<p>打造全新世界观，让你更爱你的生活</p>
-			</li>
-			<li>
-				<p><span class="font-flag"></span></p>
-				<p>打造全新世界观，让你更爱你的生活</p>
-			</li>
-			<li>
-				<p><span class="font-flower"></span></p>
-				<p>打造全新世界观，让你更爱你的生活</p>
-			</li>
-			<li>
-				<p><span class="font-app"></span></p>
-				<p>打造全新世界观，让你更爱你的生活</p>
-			</li>
-		</ul>
-	</section>
-	<section class="new-world">
-		<p><span class="font-book"></span></p>
-		<header><h2>关于新世界，你不知道的还有什么？</h2></header>
-	</section>
-	<section class="find-city">
-		<header>
-			<h2>查找新世界城市活动信息<br>——</h2
-				>
-			<h3>每个城市有不同的活动信息，请自主查询你需要了解的城市</h3>
-		</header>
-		<ul>
-			<li>
-				<select placeholder="中国">
-					<option>中国</option>
-				</select>
-			</li>
-			<li>
-				<select placeholder="省份">
-					<option>北京市</option>
-					<option>天津市</option>
-					<option>河北市</option>
-					<option>陕西市</option>
-					<option>内蒙古自治区</option>
-					<option>辽宁省</option>
-				</select>
-			</li>
-			<li>
-				<select placeholder="城市">
-				</select>
-			</li>
-			<li><button>搜索</button></li>
-		</ul>
-	</section>
-	<section class="display">
-	</section>
-	<section class="switch－new">
-	</section>
-	<section class="read-more">
-	</section>
-	<section class="join-us">
-	</section>
-</article>
+<div class="content">
+	<article>
+		<section class="banner">
+			<h3>Time of new life</h3>
+			<p>新时代，年轻的人们让我们<br>一起体验新生活	，享受新生活</p>
+			<button class="btn-primary">开始体验</button>
+			<div class="detail">
+				<ul>
+					<li>
+						<p><span class="font-cc"></span></p>
+						<p>打造全新世界观，让你更爱你的生活</p>
+					</li>
+					<li>
+						<p><span class="font-flag"></span></p>
+						<p>打造全新世界观，让你更爱你的生活</p>
+					</li>
+					<li>
+						<p><span class="font-flower"></span></p>
+						<p>打造全新世界观，让你更爱你的生活</p>
+					</li>
+					<li>
+						<p><span class="font-app"></span></p>
+						<p>打造全新世界观，让你更爱你的生活</p>
+					</li>
+				</ul>
+			</div>
+		</section>
+		<section class="new-world">
+			<p><span class="font-book"></span></p>
+			<header><h2>关于新世界，你不知道的还有什么？</h2></header>
+		</section>
+		<section class="find-city">
+			<header>
+				<h2>查找新世界城市活动信息<br>——</h2
+					>
+				<h3>每个城市有不同的活动信息，请自主查询你需要了解的城市</h3>
+			</header>
+			<ul>
+				<li>
+					<select placeholder="中国">
+						<option selected class="hidden">中国</option>
+						<option>中国</option>
+					</select>
+				</li>
+				<li>
+					<select>
+						<option selected class="hidden">省份</option>
+						<option>北京市</option>
+						<option>天津市</option>
+						<option>河北市</option>
+						<option>陕西市</option>
+						<option>内蒙古自治区</option>
+						<option>辽宁省</option>
+					</select>
+				</li>
+				<li>
+					<select>
+						<option selected class="hidden">城市</option>
+					</select>
+				</li>
+				<li>
+					<button>搜索</button>
+				</li>
+			</ul>
+		</section>
+		<section class="display">
+			...
+		</section>
+		<section class="switch－new">
+		</section>
+		<section class="read-more">
+		</section>
+		<section class="join-us">
+		</section>
+	</article>
+</div>
 <footer>
 	<div class="contract-us">
 	</div>
