尝试完成了select，纯css难度略大

--- a/task7/icepro/task0007.html
+++ b/task7/icepro/task0007.html
@@ -59,10 +59,27 @@
 			</header>
 			<ul>
 				<li>
-					<select placeholder="中国">
-						<option selected class="hidden">中国</option>
-						<option>中国</option>
-					</select>
+					<div class="select1">
+						<div class="sel-display"></div>
+						<ul class="list">
+							<li>
+								<input type="radio" name="sel1" id="sel1" checked />
+								<label for="sel1">选项卡 1</label>
+								<div id="sel-content1" class="sel-content">
+									<p>选项卡内容 1</p>
+								</div>
+								</li>
+
+							<li>
+								<input type="radio" name="sel1" id="sel2" />
+								<label for="sel2">选项卡 2</label>
+								<div id="sel-content2" class="sel-content">
+									<p>选项卡内容 2</p>
+								</div>
+							</li>
+						</ul>
+					</div>
+					
 				</li>
 				<li>
 					<select>
