--- a/task7/icepro/task0007.html
+++ b/task7/icepro/task0007.html
@@ -160,12 +160,31 @@
 					
 				</li>
 				<li>
-					<button>搜索</button>
+					<button class="btn-middle">搜索</button>
 				</li>
 			</ul>
 		</section>
 		<section class="display">
-			...
+			<figure>
+				<p><img src="img/cover3-1.png" alt="活动图"></img></p>
+				<h3>北京活动</h3>
+				<p>新社区大联盟</p>
+			</figure>
+			<figure>
+				<h3>上      海      活      动</h3>
+				<p>夜上海新景观探索</p>
+				<p><img src="img/cover3-2.png" alt="活动图"></img></p>
+			</figure>
+			<figure>
+				<p><img src="img/cover3-3.png" alt="活动图"></img></p>
+				<h3>深圳活动</h3>
+				<p>全新海岸线观点站</p>
+			</figure>
+			<figure>
+				<h3>香港活动</h3>
+				<p>奢侈消费大派送</p>
+				<p><img src="img/cover3-4.png" alt="活动图"></img></p>
+			</figure>
 		</section>
 		<section class="switch－new">
 		</section>
