--- a/task9/src/html/index.html
+++ b/task9/src/html/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>task9</title>
-	<link rel="stylesheet" type="text/css" href="css/main.min.css">
+	<link rel="stylesheet" type="text/css" href="css/main.min.css?rev=@@hash">
 </head>
 <body>
 	<!-- 这里将会是fixed的导航条-->
