完成结构设计，后面去除padding和标示颜色

--- a/task9/src/html/content.html
+++ b/task9/src/html/content.html
@@ -1,14 +1,18 @@
+<div class="position">
+
+</div>
 <!-- 这里将会是标记为2的剩余组件-->
-<div>
+<!-- TODO:去除下面的所有class -->
+<div class="statistic">
 	@@include('util/statistic.html')
 </div>
 
 <!-- 这里将会是标记为3的报表组件-->
-<div>
+<div class="form">
 	@@include('util/form.html')
 </div>
 
 <!-- 这里将会是标记为4的日期组件-->
-<div>
+<div class="date">
 	@@include('util/date.html')
 </div>
