--- a/jspublic/test.html
+++ b/jspublic/test.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <ul id="myList1"><li>Coffee</li><li>Tea</li></ul>
+<ul id="myList1"><li>Coffee</li><li>Tea</li></ul>
 <ul id="myList2"><li>Water</li><li>Milk</li></ul>
 <script type="text/javascript" src="query.js"></script>
 </body>
