--- a/task9/src/html/util/aside.html
+++ b/task9/src/html/util/aside.html
@@ -10,8 +10,8 @@
 			<ul class="list-content">
 				<li class="list-folder"><span class="font-folder"></span>文件夹一</li>
 				<li class="list-folder active"><span class="font-folder"></span>文件夹二</li>
-				<li class="list-file"><span class="font-file"></span>文档一</li>
-				<li class="list-file"><span class="font-file">文档二</li>
+				<li class="list-file active"><span class="font-file"></span>文档一</li>
+				<li class="list-file"><span class="font-file"></span>文档二</li>
 				<li class="list-folder"><span class="font-folder"></span>文件夹三</li>
 			</ul>
 		</li>
@@ -25,7 +25,7 @@
 			<p><span class="font-star"></span>图库</p>
 		</li>
 		<li class="title">
-			<p><span class="font-book"></span>成长记录</p>
+			<p><span class="font-star"></span>成长记录</p>
 		</li>
 		<li class="title">
 			<p><span class="font-book"></span>账户信息</p>
