--- a/jspublic/test.html
+++ b/jspublic/test.html
@@ -7,7 +7,7 @@
 <body>
 <ul id="myList1"><li>Coffee</li><li>Tea</li></ul>
 <ul id="myList1"><li>Coffee</li><li>Tea</li></ul>
-<ul id="myList2"><li>Water</li><li>Milk</li></ul>
+<ul id="myList2"><li id="a" data="xxx" data-s="cheep">Water</li><li>Milk</li></ul>
 <script type="text/javascript" src="query.js"></script>
 </body>
 </html>
