做了一些修改！
大家看看好不好，然后在改动

--- a/index.html
+++ b/index.html
@@ -11,35 +11,37 @@
             <h1>
                 百度前端学院任务进度展示
             </h1>
+            <p>(排名不分先后，按首字母顺序)<p>
         </div>
         <div class="main">
-            <a href="#">task1</a>
-            <a href="#">task1</a>
-            <a href="#">task1</a>
-            <a href="#">task1</a>
-            <a href="#">task1</a>
-            <a href="#">task1</a>
-            <a href="#">task1</a>
-            <a href="#">task1</a>
-            <a href="#">task1</a>
-            <a href="#">task1</a>
-            <a href="#">task1</a>
-            <a href="#">task1</a>
-            <a href="#">task1</a>
-            <a href="#">task1</a>
-            <a href="#">task1</a>
-            <a href="#">task1</a>
-            <a href="#">task1</a>
-            <a href="#">task1</a>
-            <a href="#">task1</a>
-            <a href="#">task1</a>
-            <a href="#">task1</a>
-            <a href="#">task1</a>
-            <a href="#">task1</a>
+            <a href="tpl/better1203.html"><div class="author">
+                <div class="move-l">
+                    <figure>
+                        <p>better1203</p>
+                        <img src="img/icepro.png">
+                    </figure>
+                </div>
+            </div></a>
+            <a href="tpl/ricosmall.html"><div class="author">
+                <div class="move-l">
+                    <figure>
+                        <p>ricosmall</p>
+                        <img src="img/icepro.png">
+                    </figure>
+                </div>
+            </div></a>
+            <a href="tpl/icepro.html"><div class="author">
+                <div class="move-l">
+                    <figure>
+                        <p>icepro</p>
+                        <img src="img/icepro.png">
+                    </figure>
+                </div>
+            </div></a>
         </div>
         <div class="footer">
             <p>
-                Copyright &copy 2016 ricosmall. All Rights Reserved.
+                Copyright &copy 2016 ifestudy team. All Rights Reserved.
             </p>
             <p>
                 <a href="https://github.com/ifestudy/ife-task">Source Code</a>
