--- a/task17/icepro/task0017.html
+++ b/task17/icepro/task0017.html
@@ -42,7 +42,10 @@
       }
       select {
         height: 50px;
+        border: 1px solid #000;
         border-radius: 30px;
+        -moz-border-radius: 30px;
+        -webkit-border-radius: 30px;
         text-align: center;
         /*height: 20px;*/
         appearance:none;
