--- a/task17/icepro/task0017.html
+++ b/task17/icepro/task0017.html
@@ -16,7 +16,10 @@
         padding: 20px;
         margin: 20px;
         border-radius: 15px;
-        vertical-align: middle;       
+        vertical-align: middle;   
+        height: 10%;  
+        min-height: 70px;
+        max-height: 120px; 
       }
       label {
         margin-right: 8px;
@@ -58,17 +61,21 @@
       div {
         position: relative;
       }
-      .aqi-chart-wrap {
-        /*position: absolute;*/
+      .wrap {
         min-height: 380px;
         margin-top: 20px;
         margin-left: 20px;
         margin-right: 20px; 
-        /*height: 100%;*/
         padding: 20px;
         box-shadow: 0px 0px 5px #999999;
         -webkit-box-shadow: 0px 0px 5px #999999;
-        border-radius: 15px; 
+        border-radius: 15px;
+        height: 30%; 
+      }
+      .aqi-chart-wrap {
+        width: 100%;
+        height: 100%;
+        bottom: 0px;
       }
       ul > li {
         float: left;
@@ -106,8 +113,9 @@
       <li><select id="city-select"></select></li>
     </ul>
   </fieldset>
-
-  <div class="aqi-chart-wrap">
+  <div class="wrap">
+    <div class="aqi-chart-wrap">
+    </div>
   </div>
     <!-- 引入自己封装好的组件 -->
     <script type="text/javascript" src="../../jspublic/query.js"></script>
