--- a/task17/icepro/task0017.html
+++ b/task17/icepro/task0017.html
@@ -10,6 +10,7 @@
       }
       body {
         margin: 0 auto;
+        font-size: 12px;
       }
       fieldset {
         position: relative;
@@ -23,10 +24,12 @@
       }
       label {
         margin-right: 8px;
-        border-radius: 30px;
+        border-radius: 40px;
         background-color: #c2608f;
-        font-size: 25px;
+        font-size: 18px;
         padding: 12px;
+        width: 18px;
+        text-align: center;
         color: #fff;
         display: inline-block;
       }
