--- a/task17/icepro/task0017.html
+++ b/task17/icepro/task0017.html
@@ -77,12 +77,15 @@
       }
       .aqi-chart-wrap {
         width: 100%;
-        height: 100%;
+        height: 95%;
         bottom: 0px;
       }
       ul > li {
         float: left;
         list-style: none;
+      }
+      #title {
+        /*text-align: center;*/
       }
       @keyframes high
       {
@@ -117,8 +120,10 @@
     </ul>
   </fieldset>
   <div class="wrap">
+    <h4 id="title">s<hr></h4>
     <div class="aqi-chart-wrap">
     </div>
+    <h4><hr>0</h4>
   </div>
     <!-- 引入自己封装好的组件 -->
     <script type="text/javascript" src="../../jspublic/query.js"></script>
