--- a/task23/icepro/task0023.html
+++ b/task23/icepro/task0023.html
@@ -16,12 +16,13 @@
 			color: red;
 			text-align: center;
 			border: 1px solid #000;
+			background-color: white;
 		}
 		.bg-blue {
-			background-color: blue;
+			background-color: blue !important;
 		}
 		.bg-grey {
-			background-color: grey;
+			background-color: grey !important;
 		}
 		#display {
 			height: 400px;
@@ -37,6 +38,8 @@
 		<option value="1">深度优先</option>
 		<option value="2">广度优先</option>
 	</select>
+	<input id="query">
+	<button id="search">查询</button>
 </p>
 <div id="display">
 
