完成了整体的逻辑架构
尚未完成整体渲染结构，同时也没有做任何的debug

--- a/task26/icepro/task0026.html
+++ b/task26/icepro/task0026.html
@@ -16,6 +16,6 @@
 	</div>
 	
 	<script type="text/javascript" src="../../jspublic/query.js"></script>
-	<script src="js/task.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
