完成一艘船的demo！
当然咯多艘船也是可以的，不过后面的操作还没测试，想来问题不大= =时间都花在熟悉canvas上了

--- a/task26/icepro/task0026.html
+++ b/task26/icepro/task0026.html
@@ -7,9 +7,10 @@
 </head>
 <body>
 	<div>
-		<canvas id="display">
+		<canvas id="display" width="800" height="600" style="border:1px #000 solid;">
 			你的浏览器可能不支持canvas，请更换支持canvas的浏览器。
 		</canvas>
+		
 	</div>
 	<div id="control">
 
